# ProductLineAnalysis

haskell/SPL/: SPL.cabal  mytest.hs  stack.yaml
haskell/SPL/src/: SPL.hs
haskell/SPL/src/Shallow/: VList.hs
haskell/SPL/test/: SPL_prop.hs  ShareVis.hs  VList.hs  VList_test.hs  VList_test.hs.bak  VList_test.hs.rewrite.bak  rrdl.hs  testparse.hs  thtest.hs
